# fumo-API

./: .dockerignore  .env.example  .eslintignore  .eslintrc.yml  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SUMMARY.md  diesel.toml  index.md  package-lock.json  package.json  quick-start.md  tsconfig.json  v3.md
.github/ISSUE_TEMPLATE/: bug_report.md  suggestion.md
.github/workflows/: codeql-analysis.yml  tests.yml
docs/: CNAME  index.md
fumo-api/: Cargo.toml  diesel.toml
fumo-api/src/: admin.rs  admin_router.rs  fumos_router.rs  main.rs
fumo-api/src/database/: mod.rs  models.rs
fumo-bot/: .env.example  Cargo.toml  readme.txt
fumo-bot/src/: admin_server.rs  event_handler.rs  main.rs  util.rs
fumo-bot/src/commands/: admin_server.rs  global.rs
fumo-bot/src/event_handler/: interaction_create.rs  message_create.rs
fumo-db/: Cargo.toml  diesel.toml  readme.txt
fumo-db/src/: lib.rs  models.rs  operations.rs  schema.rs
fumo-rest-api/: .env.example  Cargo.toml  readme.txt
fumo-rest-api/src/: admin_router.rs  fumos_router.rs  main.rs  util.rs
fumo-web/: .gitignore  Cargo.toml  package-lock.json  package.json  readme.txt  svelte.config.js  tsconfig.json  wrangler.jsonc
fumo-web/src/: app.d.ts  app.html  main.rs  worker-configuration.d.ts
fumo-web/src/lib/: index.ts  (+2 more)
migrations/2025-07-14-165440_create_fumos/: down.sql  up.sql
r2-worker-uploader/: package-lock.json  package.json  readme.txt  worker-configuration.d.ts  wrangler.jsonc
r2-worker-uploader/src/: index.ts
reference/api-reference/: README.md  fumos.md
src/: App.ts  app.js  db.js  main.rs  server.js  server.ts
src/config/: env.ts
src/database/: mod.rs  models.rs  schema.rs
src/fumo/: controller.js
src/fumos/: controller.js
src/models/: model.js
src/random/: controller.js
src/types/: misc.ts
tests/: random.test.js  root.test.js  specific.test.js
(+4 files in other folders)
