[package]
name = "fumo-API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4"}
diesel = { version = "2.2.12", features = ["postgres","r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
r2d2 = "0.8"