[package]
name = "fumo-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
poise_macros = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "rt"] }
async-trait = { version = "0.1.48", default-features = false }
fumo-db = {path = "../fumo-db"} 
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1.41"
serde_json = "1.0.142"
reqwest = { version = "0.11.22"}