[package]
name = "fumo-rest-API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
diesel = { version = "2.2.12", features = ["postgres","r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fumo-db = { path = "../fumo-db"}
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
